Rest and GraphQL Example